@@ -55,11 +55,16 @@
 		<dependency org="concurrent" name="concurrent" rev="1.3.4" conf="buildtime->default" />
 		<dependency org="javax.servlet" name="servlet-api" rev="2.4" conf="buildtime->default" />
 		<dependency org="javax.portlet" name="portlet-api" rev="1.0" conf="buildtime->default" />
+		<dependency org="org.hibernate" name="hibernate" rev="3.2.3.ga" conf="buildtime->default" />
+		<dependency org="org.springframework" name="spring-dao" rev="2.0.4" conf="buildtime->default" />
+		<dependency org="org.springframework" name="spring-hibernate3" rev="2.0.4" conf="buildtime->default" />
 
 		<!-- test time only dependencies -->
+		<dependency org="hsqldb" name="hsqldb" rev="1.8.0.7" conf="test->default" />
 		<dependency org="log4j" name="log4j" rev="1.2.14" conf="test->default" />
 		<dependency org="org.easymock" name="easymock" rev="2.2" conf="test->default" />
 		<dependency org="com.cenqua.clover" name="clover" rev="1.3.12" conf="test->default" />
+		<dependency org="org.springframework" name="spring-jdbc" rev="2.0.4" conf="test->default" />
 		<dependency org="org.springframework" name="spring-mock" rev="2.0.4" conf="test->default" />
 	</dependencies>
 
